	Saturday 25-1-2014
	- Added startup scan for question unlocks if more questions have been added
	- Added questions 40-44

[ Version 0.1.8a ] 
	Sunday 26/1-2014
	- Removed zoneRequirementUnlockCopy attribute and redid zoneUnlockHash to make
	it work more like other similar attributes.
	- Added question 45
	Monday 27/1-2014
	- Added question 46

[ Version 0.1.9a ] 
	Wednesday 29/1-2014
	- Fixed bug that was making modelXOffset not being used properly by the addon
	- Added question 47-49
	- Fixed wording on filter and popup frames

[ Version 0.2.0b ]					-- First public release
	Thursday 30/1-2014
	- Initial release version, thus entering beta.
	- Fixed wording on inspect frame.
	- Added question 50
	- Removed debugging messages
	- Made slash commands toggle addon frame instead of just showing it
	- Changed wording on help frame pages
	- Changed wording on filter dropdown
	- Tweaked options menu
	- Added two more pages to the help menu, about the continent icon and
	about security/protection.

[ Version 0.2.5b ]
	Friday 1/2-2014
	- Added question 51
	- Attempted to fix inspection frame bug
	- Make some questions clearer, added additional answers and such
	- Added challenge, with the singleplayer challenge semi-working
	- Added status bar template
	Saturday 2/2-2014
	- Redid buttons in the way they are handled internally, now they're
	used from top to bottom instead in a random order.
	Sunday 3/2-2014
	- Implemented functional multiplayer challenge
[ Version 0.2.6b ]
	Tuesday 4/2-2014
	- Fixed a typo with the inspect frame, which might've caused bugs.
	- Attempted to fix a bug with the challenge cooldown being nil.
	- Removing debugging code
	- Changed how times are broadcasted with the multiplayer challenge
	- Fixed various bugs with the multiplayer challenge
	- Started working on continent hint frame
[ Version 0.2.7b ]
	Tuesday 4/2-2014
	- Added table initialization function, used to initialize config
	values in a better way